Some security fixes, new features

--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -31,8 +31,10 @@
     <div id="tasklist"></div>
     
     <div id="footer">Wget GUI Light <span class="button"><a id="bookmark" href="#" title="Move me to your bookmarks bar">Download this</a></span></div>
-
+    
+    <script type="text/javascript" src="version.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/url.js"></script>
     <script type="text/javascript" src="js/notifIt.js"></script>
     <script type="text/javascript" src="js/core.js"></script>
